2012-10-16  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php,
	  operation/agentes/datos_agente.php: Allow switching between the main
	  database and the history database to retrieve module data.

2012-10-16  Ramon Novoa  <rnovoa@artica.es>

	* include/db/postgresql.php,
	  include/db/mysql.php,
	  include/db/oracle.php: Always open a new connection. Useful
	  if the history database is in the same host as the main database.

2012-10-15 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_extensions.php,
	extensions/insert_data.php,
	extensions/snmp_explorer.php,
	extensions/system_info.php,
	extensions/net_tools.php,
	extensions/extension_uploader.php,
	extensions/pandora_logs.php,
	extensions/agents_modules.php,
	extensions/update_manager.php,
	extensions/ssh_gateway.php,
	extensions/dbmanager.php,
	extensions/vnc_view.php,
	extensions/resource_registration.php,
	extensions/resource_exportation.php,
	extensions/users_connected.ph,p
	extensions/module_groups.php,
	extensions/plugin_registration.php,
	operation/extensions.php,
	godmode/extensions.php: Modified extensions to show the
	version in godmode and operation extension table view.

2012-10-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Deleted sql transaction
	when event delete

2012-10-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events_validate.php
	operation/events/events_list.php
	operation/events/events.php: Fixed events validation and
	deletion problem not searching similar events if the event
	is only one and passing the current time window

2012-10-09  Hirofumi Kosaka  <kosaka@rworks.jp>

	* pandoradb.sql: cleaned code style, to be acceptable by
	Clustrix's SQL parser, for examples.

2012-10-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_events.php: Removed translation in events 
	message.

2012-10-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
